backend/pkg/tests/yaml/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: api-svc
  name: api-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
  selector:
    k8s-app: api
  type: ClusterIP
