backend/pkg/tests/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: api-svc
            port:
              number: 80
        path: /
        pathType: Prefix
